// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageTemplate fullHeight is rendered with noscroll 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate fullHeight is rendered with true 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage euiPage--grow euiPageTemplate testClass1 testClass2"
  data-test-subj="test subject string"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be set to a custom number 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-custom"
        style="padding-left:0;padding-right:0;max-width:1024px"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate restrict width can be turned off 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
      template="default"
    />
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex testClass1 testClass2"
      data-test-subj="test subject string"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredBody with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredBody"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex testClass1 testClass2"
      data-test-subj="test subject string"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--responsive euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent euiPageHeaderContent--paddingLarge euiPageHeaderContent--restrictWidth-default euiPageHeaderContent--bottomBorder"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template centeredContent with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="centeredContent"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex testClass1 testClass2"
      data-test-subj="test subject string"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--responsive euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent euiPageHeaderContent--paddingLarge euiPageHeaderContent--restrictWidth-default euiPageHeaderContent--bottomBorder"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template default with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
    data-test-subj="test subject string"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentBodyProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageContentProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      aria-label="aria-label"
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex testClass1 testClass2"
      data-test-subj="test subject string"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty is rendered with pageHeader 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <header
      aria-label="aria-label"
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--responsive euiPageHeader--center testClass1 testClass2"
      data-test-subj="test subject string"
      title="Page title"
    >
      <div
        class="euiPageHeaderContent euiPageHeaderContent--paddingLarge euiPageHeaderContent--restrictWidth-default euiPageHeaderContent--bottomBorder"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty minHeight is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:40vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty paddingSize is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty style is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px;max-height:100vh"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate template empty with pageSideBar is rendered with pageSideBarProps 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    aria-label="aria-label"
    class="euiPageSideBar euiPageSideBar--paddingLarge euiPageSideBar--sticky testClass1 testClass2"
    data-test-subj="test subject string"
  >
    Side Bar
  </div>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="empty"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPageTemplate with bottomBar is rendered 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody"
  >
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--flex"
      style="padding-top:0;padding-bottom:0"
      template="default"
    >
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
        style="padding-left:0;padding-right:0"
      />
    </div>
    <section
      aria-label="Page level controls"
      class="euiBottomBar euiBottomBar--sticky"
      style="left:0;right:0;bottom:0"
    >
      <h2
        class="euiScreenReaderOnly"
      >
        Page level controls
      </h2>
      <div
        class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
      >
        Bottom Bar
      </div>
    </section>
    <p
      aria-live="assertive"
      class="euiScreenReaderOnly"
    >
      There is a new region landmark with page level controls at the end of the document.
    </p>
  </div>
</div>
`;
